# sira-neurosymbolic-epidemics

./: .gitignore  README.md  SIRA.ipynb  pyproject.toml  requirements.txt
results/: example_audit.json  llm_report.md
results/depth_study/: depth_study_results.csv  slow_metrics_results.csv
scripts/: discover_equations.py  mass_evaluation.py  run_simulation.py  train_neural_ode.py  verify_pipeline.py
src/: analysis_additions.py  ensemble_depth_study.py  epidemic_interpreter.py  equation_discovery.py  neural_net.py  numerics.py  purity_auditor.py  simulation.py
src/sira.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sira/neural_ode/: solver.py  vector_field.py
src/sira/simulation/: deterministic.py  gillespie.py
src/sira/symbolic/: library.py  stlsq.py
